separate app and provider, use script to start provider as multiple instances

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -16,27 +16,27 @@ http {
   }
 
   upstream stf_auth {
-    server auth:3000 max_fails=0;
+    server app:3001 max_fails=0;
   }
 
   upstream stf_storage_apk {
-    server storage-plugin-apk:3000 max_fails=0;
+    server app:3002 max_fails=0;
   }
 
   upstream stf_storage_image {
-    server storage-plugin-image:3000 max_fails=0;
+    server app:3003 max_fails=0;
   }
 
   upstream stf_storage {
-    server storage-temp:3000 max_fails=0;
+    server app:3004 max_fails=0;
   }
 
   upstream stf_websocket {
-    server websocket:3000 max_fails=0;
+    server app:3005 max_fails=0;
   }
 
   upstream stf_api {
-    server api:3000 max_fails=0;
+    server app:3006 max_fails=0;
   }
 
   types {
@@ -59,8 +59,8 @@ http {
     root          /dev/null;
 
 
-    location ~ "^/d/nuc/([^/]+)/(?<port>[0-9]{3,5})/$" {
-      proxy_pass http://provider:$port/;
+    location ~ "^/d/(?<provider>\w+?)/([^/]+)/(?<port>[0-9]{3,5})/$" {
+      proxy_pass http://$provider:$port/;
       proxy_http_version 1.1;
       proxy_set_header Upgrade $http_upgrade;
       proxy_set_header Connection $connection_upgrade;
